@@ -12,6 +12,23 @@ SusyNtTools::SusyNtTools() :
 {}
 
 /*--------------------------------------------------------------------------------*/
+// Get event weight, combine gen, pileup, xsec, and lumi weights
+// Default weight uses ICHEP dataset, A-B14 lumi
+// You can supply a different luminosity, but the pileup weights will still correspond to A-B14
+/*--------------------------------------------------------------------------------*/
+float SusyNtTools::getEventWeight(const Event* evt, float lumi)
+{
+  if(!evt->isMC) return 1;
+  else return evt->w * evt->wPileup * evt->xsec * lumi / evt->sumw;
+}
+/*--------------------------------------------------------------------------------*/
+float SusyNtTools::getEventWeight1fb(const Event* evt)
+{
+  if(!evt->isMC) return 1;
+  else return evt->w * evt->wPileup1fb * evt->xsec * LUMI_A_B3 / evt->sumw;
+}
+
+/*--------------------------------------------------------------------------------*/
 // 'Overview' functions to make it easy for user to grab all objects
 /*--------------------------------------------------------------------------------*/
 void SusyNtTools::getBaselineObjects(SusyNtObject* susy_nt, ElectronVector &elecs,
